--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -185,6 +185,12 @@ header img {
     border: 1px solid #ddd;
     border-radius: 4px;
 }
+.admin-pet-form-input-2 {
+  margin: 0 10px;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
 
 .admin-pet-form-button {
     grid-column: 1 / 3;
@@ -198,6 +204,10 @@ header img {
 
 .admin-pet-form-button:hover {
     background-color: #45a049;
+}
+
+.pet-type-list-summary{
+  margin: 20px 0;
 }
 
 table {
