--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -165,12 +165,13 @@ header img {
     margin-right: 0;
   }
 
-.admin-pet-form-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.admin-form-container {
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr; */
     gap: 20px;
-    max-width: 200px;
+    max-width: 150px;
     margin: 20px auto;
+    /* background-color: #333; */
 }
 
 .admin-pet-form-label {
@@ -180,19 +181,15 @@ header img {
 }
 
 .admin-pet-form-input {
-    width: 100%;
+
+    width: 200px;
     padding: 8px;
     border: 1px solid #ddd;
-    border-radius: 4px;
-}
-.admin-pet-form-input-2 {
-  margin: 0 10px;
-  padding: 8px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
 }
 
+
 .admin-pet-form-button {
+    width: 100%;
     grid-column: 1 / 3;
     padding: 10px 15px;
     background-color: #4caf50;
@@ -200,6 +197,7 @@ header img {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 .admin-pet-form-button:hover {
