--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -166,30 +166,29 @@ header img {
   }
 
 .admin-form-container {
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1fr; */
-    gap: 20px;
-    max-width: 150px;
-    margin: 20px auto;
+    display: flex;
+    /* width: 600px; */
+    /* align-items: center; */
     /* background-color: #333; */
 }
 
 .admin-pet-form-label {
-    text-align: right;
+    text-align: left;
     padding-right: 10px;
     line-height: 30px;
+    width: 150px;
 }
 
 .admin-pet-form-input {
-
-    width: 200px;
+    /* width: 200px; */
     padding: 8px;
     border: 1px solid #ddd;
+     /* background-color: #333; */
 }
 
 
 .admin-pet-form-button {
-    width: 100%;
+    width: 100px;
     grid-column: 1 / 3;
     padding: 10px 15px;
     background-color: #4caf50;
@@ -240,3 +239,39 @@ table {
     margin-right: 0;
   }
 
+
+
+  .admin-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+  .admin-table th, .admin-table td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: center;
+  }
+  
+  .admin-table th {
+    background-color: #f5f5f5;
+    font-weight: bold;
+  }
+  
+  .admin-table td img {
+    border-radius: 4px;
+  }
+  
+  .admin-table button {
+    margin: 0 3px;
+    padding: 4px 6px;
+    border: none;
+    border-radius: 4px;
+    background: #eee;
+    cursor: pointer;
+  }
+  
+  .admin-table button:hover {
+    background-color: #dcdcdc;
+  }
+  
