--- a/src/components/items/ItemCard.css
+++ b/src/components/items/ItemCard.css
@@ -34,4 +34,17 @@
     padding: 2px 6px;
     border-radius: 12px;
   }
-  
+  .item-note {
+    font-size: 0.85rem;
+    color: #666;
+    margin-top: 4px;
+    text-align: center;
+  }
+  .item-icon{
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    border: none;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 2px 5px;
+  }
