--- a/src/components/PetProfile.css
+++ b/src/components/PetProfile.css
@@ -49,7 +49,7 @@
     border: 1px solid #ddd;
     margin: auto;
     margin-top: 50px;
-    width: 70%;
+    width: min(700px,95%);
     justify-content: center;
 
 }
@@ -62,6 +62,8 @@
     font-size: 1.7rem;
     font-weight: 600;
     color: #67606a;
+    padding: 7px 0; 
+    /* height: 40px; */
 }
 
 .pet-details{
@@ -81,14 +83,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 700px;
+    height: 600px;
 }
 
 .pet-image {
-    max-width: 100%;
-    height: 350px;
+    width: min(400px, 90%);
+    /* height:100%; */
     object-fit: cover;
     /* margin-bottom: 10px; */
+    /* border: solid 1px black; */
 }
 
 .pet-header h2 {
